<resources>
    <string name="app_name">QwertyHelper</string>
    <string name="text_caption">Здесь вы сможете посмотреть свой пароль введенный по методу "русское слово в английской раскладке."</string>
    <string name="gen_text_caption">Сгенерировать случайный пароль ему на замену:</string>

    <string name ="clipboard">Password</string>
    <string name = "copied">Скопировано</string>
    <string name="generate_pass">Генерировать</string>
    <string name="caps_checkbox">Заглавные буквы</string>
    <string name="digits_checkbox">Цифры</string>
    <string name="special_checkbox">Специальные символы</string>
    <string name="password">Пароль</string>
    <string name="seekbar_oninit">Длина пароля: 8 символов</string>
    <plurals name="symbol_count">

    <item quantity="one" >Длина пароля: %d символ</item>
        <item quantity="few">Длина пароля: %d символа</item>
        <item quantity="many">Длина пароля: %d символов</item>
    </plurals>

    <string-array name="passwords_difficulty">
        <item>Слабый</item>
        <item>Средний</item>
        <item>Хороший</item>
        <item>Отличный</item>
    </string-array>

    <string-array name="russians">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>х</item>
        <item>ъ</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>ж</item>
        <item>э</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
        <item>б</item>
        <item>ю</item>
        <item>ё</item>
    </string-array>
    <string-array name="latin">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>[</item>
        <item>]</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>\;</item>
        <item>\'</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
        <item>,</item>
        <item>.</item>
        <item>`</item>
    </string-array>
</resources>
