<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/main_vertical_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_caption"
            style="@style/text_caption_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/vertical_linear">

            <TextView
                android:id="@+id/res_view"
                style="@style/text_view_weight"
                android:layout_height="wrap_content"
                android:textAppearance="@style/resultTextAppereance"
                tools:texts="resultd" />

            <ImageButton
                android:id="@+id/copypast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_content_copy_black_24dp"
                style="@style/copy_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/password_diff"
                android:layout_height="wrap_content"
                tools:texts="good"
                style="@style/text_view_weight" />

            <ImageView
                android:id="@+id/password_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="10000"
                android:src="@drawable/password_mark" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gen_text_caption"
            style="@style/text_caption_style" />
        <CheckBox
            android:id="@+id/checkcaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caps_checkbox"
            android:checked="true" />
        <CheckBox
            android:id="@+id/checkdigits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digits_checkbox"
            android:checked="true"  />
        <CheckBox
            android:id="@+id/count_symbols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/special_checkbox"
            android:checked="false"  />

        <SeekBar
            android:id="@+id/pass_len_bar"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

        <TextView
            android:id="@+id/seekbar_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/seekbar_caption_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pass_shape" >

            <TextView
                android:id="@+id/gen_view"
                style="@style/gen_text_view"
                android:layout_height="wrap_content"
                android:textAppearance="@style/resultTextAppereance"
                tools:texts="resultd" />

            <ImageButton
                android:id="@+id/copy_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                style="@style/copy_button" />
        </RelativeLayout>
        <Button
            android:id = "@+id/genpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_pass"
            style="@style/button_text_color" />

</LinearLayout>
</ScrollView>
